# std-make

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Version.cmake  appveyor.yml  version.hpp.in
doc/: CMakeLists.txt  Doxyfile.in  tutorial.hpp
doc/proposal/any_optional/: D0032.odt  D0032R1.odt  P0032.odt  P0032R1.md  P0032R1.odt  P0032R2.md  P0032R3.md  fundamental_ts_improvements.md
doc/proposal/customization/: customization_points.md
doc/proposal/expected/: DXXXXR0_expected.md  DXXXXR0_fs_expected.md  N4109_R2.md  d0323r2.md  d0323r3.md  expected_LWG_design_issues.md  p0323r0.md  p0323r1.md  p0323r2.md  p0323r3.md  p1051r0.md
doc/proposal/factories/: DXXXX_factories.html  DXXXX_factories.md  DXXXX_factories.odt  d0338r1.md  d0338r2.md  d0338r3.md  (+4 more)
example/bits/: bit.cpp
example/chrono/: day_types_pass.cpp  frame_types_pass.cpp
example/strong/: address_offset_pass.cpp  currency.hpp  duration_pass.cpp  money.cpp  money3.cpp  strong_money.cpp
example/subword/: subword.cpp
include/experimental/: applicative.hpp  array.hpp  bit.hpp  bit_mask.hpp  bit_ops.hpp  byte.hpp  chrono.hpp  compare.hpp  contract.hpp  cstr_view.hpp  cstring_view.hpp  expected.hpp  expected2.hpp  flat_map.hpp  functional.hpp  functor.hpp  future.hpp  iterator.hpp  make.hpp  memory.hpp  meta.hpp  monad.hpp  monad_error.hpp  n_applicative.hpp  n_functor.hpp  new.hpp  nullable.hpp  observer_ptr.hpp  optional.hpp  optionals.hpp  ordinal.hpp  ordinal_array.hpp  ordinal_ordered_map.hpp  ordinal_ordered_set.hpp  ordinal_range.hpp  ordinal_set.hpp  p_applicative.hpp  p_functor.hpp  polymorphic_value.hpp  possibly_valued.hpp  (+28 more)
include/jasel/: version.hpp
test/: CMakeLists.txt  jamfile.v2
test/applicative/: applicative_std_array_pass.cpp  applicative_std_expected_pass.cpp  applicative_std_optional_pass.cpp  applicative_std_tuple_pass.cpp
test/bits/: bit_mask_pass.cpp  bit_pass.cpp
test/callable_wrapper/: ex_pass.cpp
test/compare/: compare_pass.cpp
test/cstr_view/: cstr_view_pass.cpp  static_cstring_pass.cpp  string_view_pass.cpp
test/expected/: expected_no_move_constructible_fail.cpp  expected_pass.cpp  unexpected_pass.cpp
test/expected2/: trivial_expected_pass.cpp  trivial_unexpected_pass.cpp
test/flat_map/: flat_map_pass.cpp
test/functional/: overload_pass.cpp
test/functor/: functor_pass.cpp  functor_std_array_pass.cpp  functor_std_expected_pass.cpp  functor_std_optional_pass.cpp  functor_std_pair_pass.cpp  functor_std_shared_ptr_pass.cpp  functor_std_tuple_pass.cpp  functor_std_unique_ptr_pass.cpp
test/make/: emplace_ready_future_pass.cpp  emplace_ready_future_ref_lit_fail.cpp  emplace_ready_future_ref_void_fail.cpp  make_boost_expected_pass.cpp  make_boost_optional_pass.cpp  make_pass.cpp  make_ready_future_pass.cpp  make_ready_future_ref_lit_fail.cpp  make_ready_future_ref_lvalue_fail.cpp  make_ready_future_value_lvalue_fail.cpp  make_std_array_pass.cpp  make_std_expected_pass.cpp  make_std_future_pass.cpp  make_std_optional_pass.cpp  make_std_pair_pass.cpp  make_std_shared_future_pass.cpp  make_std_shared_ptr_pass.cpp  make_std_tuple_pass.cpp  make_std_unique_ptr_pass.cpp  pair_pass.cpp  signature_pass.cpp
test/monad/: monad_std_expected_pass.cpp  monad_std_optional_pass.cpp
test/monad_error/: monad_error_std_expected_pass.cpp  monad_error_std_optional_pass.cpp  monad_error_std_unique_ptr_pass.cpp
test/n_applicative/: n_applicative_std_tuple_pass.cpp
test/n_functor/: n_functor_pass.cpp  n_functor_std_pair_pass.cpp  n_functor_std_tuple_pass.cpp
test/nullable/: nullable_pass.cpp  nullable_std_optional_pass.cpp  nullable_std_shared_ptr_pass.cpp  nullable_std_unique_ptr_pass.cpp
test/numerics/: charconv_pass.cpp
test/numerics/numbers/: double_wide_arithmetic_pass.cpp  double_wide_types_pass.cpp  overflow_detection_arithmetic_pass.cpp
test/observer_ptr/: observer_ptr_pass.cpp
test/optionals/: optionals_pass.cpp
test/ordinal/: Bool.hpp  Bounded.hpp  ordinal_pass.cpp
test/ordinal/container/ordinal_array/: ordinal_array_pass.cpp
test/ordinal/container/ordinal_ordered_map/: ordinal_ordered_map_pass.cpp
test/ordinal/container/ordinal_ordered_set/: ordinal_ordered_set_pass.cpp
test/ordinal/container/ordinal_range/: ordinal_range_pass.cpp
test/ordinal/container/ordinal_set/: ordinal_set_pass.cpp
test/p_applicative/: p_applicative_std_tuple_pass.cpp
test/p_functor/: p_functor_pass.cpp  p_functor_std_pair_pass.cpp  p_functor_std_tuple_pass.cpp
test/pod/optional/: optional_pass.cpp
test/pod/optionals/: pod_optionals_pass.cpp
test/polymorphic_value/: polymorphic_value_pass.cpp
test/possibly_valued/: possibly_valued_pass.cpp  possibly_valued_std_optional_pass.cpp  possibly_valued_std_shared_ptr_pass.cpp  possibly_valued_std_unique_ptr_pass.cpp
test/product_type/: c_array_pass.cpp  std_array_pass.cpp  std_pair_pass.cpp  std_tuple_pass.cpp  struct_pass.cpp
test/range/: range_c_array_pass.cpp  range_std_array_pass.cpp
test/result/: success_failure_pass.cpp  trivial_expected_pass.cpp  trivial_result_pass.cpp
test/scoped/: scope_pass.cpp
test/span/: span_pass.cpp
test/static_forward_list/: static_forward_list_pass.cpp
test/static_vector/: static_vector_pass.cpp
test/status_value/: status_value_pass.cpp
test/strong/: byte_pass.cpp  safe_bool_pass.cpp  strict_bool_pass.cpp  strong_bool_pass.cpp  strong_bounded_int_pass.cpp  strong_counter_pass.cpp  strong_enums_pass.cpp  strong_id_pass.cpp  strong_ints_pass.cpp
test/sum_type/: sum_type_pass.cpp  sum_type_std_expected_pass.cpp  sum_type_std_optional_pass.cpp
test/swappable/: swap_c_array_pass.cpp
test/utility/: cast_pass.cpp  lvalue_ref_pass.cpp  narrow_pass.cpp  not_null_pass.cpp  only_when_pass.cpp  out_param_pass.cpp
test/value_or_error/: value_or_error_pass.cpp  value_or_error_std_optional_pass.cpp  value_or_error_std_unique_ptr_pass.cpp  value_or_error_stde_expected_pass.cpp
test/value_or_none/: value_or_none_pass.cpp  value_or_none_std_optional_pass.cpp  value_or_none_std_shared_ptr_pass.cpp  value_or_none_std_unique_ptr_pass.cpp
(+466 files in other folders)
